# cmlibs.widgets

./: .gitignore  multiple_inheritance.py  print_info.py  pyproject.toml  setup.py
.github/workflows/: deploy.yaml  test.yaml
docs/: conf.py  fieldeditorwidget.rst  graphicseditorwidget.rst  index.rst  materialeditorwidget.rst  modelsourceseditorwidget.rst  regioneditorwidget.rst  sceneeditorwidget.rst  sceneviewerwidget.rst  spectrumeditorwidget.rst  tessellationwidget.rst  timeeditorwidget.rst  viewwidget.rst
docs/handlers/: fixedaxistranslationhandler.rst  orientationhandler.rst
res/: icons.qrc
res/designer/: addviewwidget.ui  buttonswidget.ui  consoleeditorwidget.ui  displaysettingswidget.ui  exportwebglwidget.ui  fieldeditorwidget.ui  fieldlisteditorwidget.ui  graphicseditorwidget.ui  groupeditorwidget.ui  groupmanagerwidget.ui  interactiveconsolewidget.ui  loggereditorwidget.ui  logviewerwidget.ui  materialeditorwidget.ui  mesheditorwidget.ui  modelsourceseditorwidget.ui  regioneditorwidget.ui  sceneeditorwidget.ui  scenelayoutchooserdialog.ui  sceneviewereditorwidget.ui  snapshotdialog.ui  spectrumeditorwidget.ui  tessellationeditorwidget.ui  timeeditorwidget.ui
src/cmlibs/widgets/: __init__.py  basesceneviewerwidget.py  collapsibleboxwidget.py  definitions.py  fieldpropertieswidget.py  groupeditorwidget.py  groupmanagerwidget.py  mesheditorwidget.py  sceneviewerwidget.py  viewwidget.py
src/opencmiss/zincwidgets/: __init__.py  addviewwidget.py  alignmentsceneviewerwidget.py  basesceneviewerwidget.py  consoleeditorwidget.py  (+42 more)
tests/: testmain.py
(+55 files in other folders)
